vsat/manifests/00-busybox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: cert-manager
          image: busybox
          command:
            - sleep
            - "3600"
          imagePullPolicy: IfNotPresent
