vsat/manifests/09-status-svc.yaml
---
# Source: status-svc/templates/service.yaml
# Cluster IP
apiVersion: v1
kind: Service
metadata:
  name: vsat-status-svc
  namespace: "platform"
  labels:
    app.kubernetes.io/name: status-svc
    app.kubernetes.io/instance: vsat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: status-svc
    app.kubernetes.io/instance: vsat
  ports:
    - port: 8090
      targetPort: service-port
      protocol: TCP
      name: service-port
---
# Source: status-svc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsat-status-svc
  namespace: "platform"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: status-svc
      app.kubernetes.io/instance: vsat
  template:
    metadata:
      labels:
        vsatApp: "vsat-status-svc"
        vsatRedisIngress: "true"
        vsatMessagingIngress: "true"
        app.kubernetes.io/name: status-svc
        app.kubernetes.io/instance: vsat
    spec:
      imagePullSecrets:
        - name: jfrogcred
      serviceAccountName: vsat-status-svc
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsUser: 1000
      containers:
        - name: vsat-status-svc
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "rimo.jfrog.io/docker/venafi-vsatellite/status-svc@sha256:25bd00e57298c774a1f0058d1c0e5b5c7fc813207e7f76f4131d46f63c4f27b3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: service-port
              containerPort: 8090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: service-port
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: service-port
            initialDelaySeconds: 5
          resources:
            {}
          volumeMounts:
            - name: certs-mount
              mountPath: /certs-mount
              readOnly: true
      volumes:
        - name: certs-mount
          secret:
            secretName: status-svc-tls
