vsat/manifests/02-platform-base.yaml
# Source: platform-base/templates/deny-all-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: "platform-deny-all-base"
  namespace: "platform"
spec:
  podSelector: {}
  ingress: []
