vsat/manifests/03-redis.yaml
---
# Source: redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsat-redis-headless
  namespace: "platform"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-15.6.0
    app.kubernetes.io/instance: vsat-redis
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: vsat-redis
---
# Source: redis/templates/master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsat-redis-master
  namespace: "platform"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-15.6.0
    app.kubernetes.io/instance: vsat-redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: master
spec:
  type: ClusterIP
  
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: vsat-redis
    app.kubernetes.io/component: master
---
# Source: redis/templates/master/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vsat-redis-master-2
  namespace: "platform"
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-15.6.0
    app.kubernetes.io/instance: vsat-redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: vsat-redis
      app.kubernetes.io/component: master
  serviceName: vsat-redis-headless
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        helm.sh/chart: redis-15.6.0
        app.kubernetes.io/instance: vsat-redis
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: master
        vsatApp: vsat-redis-master
      annotations:
        checksum/configmap: f613fe0a8c31bdeeb64b8e05b28caf0672e8085ee37bdcb31bfcfa653794da00
        checksum/health: a8490c55d40f06d60ca05c707f48dbfa3f8be1b8507c943c8872381e87eb87c8
        checksum/scripts: 79570362e9b0dcf6826eebb15abca00ec7570b4a17b4a1bd456a50cd8650e83f
        checksum/secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    spec:
      securityContext:
        fsGroup: 1001
      serviceAccountName: vsat-redis
      affinity:
        podAffinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: redis
                    app.kubernetes.io/instance: vsat-redis
                    app.kubernetes.io/component: master
                namespaces:
                  - "platform"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: jfrogcred
      containers:
        - name: redis
          image: rimo.jfrog.io/docker/venafi-vsatellite/redis@sha256:c84b2ae0f75440be3b06332303261ccdb42b8fe515aa5319b768730eeb0cc005
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
          args:
            - -c
            - /opt/bitnami/scripts/start-scripts/start-master.sh
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            # One second longer than command timeout should prevent generation of zombie processes.
            timeoutSeconds: 6
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 1
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: start-scripts
              mountPath: /opt/bitnami/scripts/start-scripts
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
              subPath: 
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc/
            - name: tmp
              mountPath: /tmp
            - name: redis-certificates
              mountPath: /opt/bitnami/redis/certs
              readOnly: true
      volumes:
        - name: start-scripts
          configMap:
            name: vsat-redis-scripts
            defaultMode: 0755
        - name: health
          configMap:
            name: vsat-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: vsat-redis-configuration
        - name: redis-tmp-conf
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: redis-certificates
          secret:
            secretName: redis-master-tls
            defaultMode: 256
        - name: redis-data
          emptyDir: {}
---
# Source: redis-networkPolicy/templates/redisIngressNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "redis-ingress"
spec:
  podSelector:
    matchLabels:
      vsatApp: "vsat-redis-master"
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            vsatRedisIngress: "true"
