vsat/manifests/05-messaging-svc.yaml
---
# Source: messaging-svc/templates/ingressNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "messaging-svc-ingress"
spec:
  podSelector:
    matchLabels:
      vsatApp: "vsat-messaging-svc"
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            vsatMessagingIngress: "true"
---
# Source: messaging-svc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsat-messaging-svc
  namespace: "platform"
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: service-port
      protocol: TCP
      name: service-port
  selector:
    app.kubernetes.io/name: messaging-svc
    app.kubernetes.io/instance: vsat
---
# Source: messaging-svc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsat-messaging-svc
  namespace: "platform"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: messaging-svc
      app.kubernetes.io/instance: vsat
  template:
    metadata:
      labels:
        vsatApp: "vsat-messaging-svc"
        vsatRedisIngress: "true"
        app.kubernetes.io/name: messaging-svc
        app.kubernetes.io/instance: vsat
    spec:
      imagePullSecrets:
        - name: jfrogcred
      serviceAccountName: vsat-messaging-svc
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsUser: 1000
      containers:
        - name: vsat-messaging-svc
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "rimo.jfrog.io/docker/venafi-vsatellite/messaging-svc@sha256:334db467935d411c7a74b22813ee331573fe441e84e5833b593ffd3b40de9052"
          imagePullPolicy: IfNotPresent
          ports:
            - name: service-port
              containerPort: 8082
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: service-port
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: service-port
              scheme: HTTPS
            initialDelaySeconds: 5
          resources:
            {}
          volumeMounts:
            - name: certs-mount
              mountPath: /certs-mount
              readOnly: true
      volumes:
        - name: certs-mount
          secret:
            secretName: messaging-svc-tls
