vsat/manifests/06-inventory-svc.yaml
---
# Source: inventory-svc/templates/ingressNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "inventory-svc-ingress"
spec:
  podSelector:
    matchLabels:
      vsatApp: "vsat-inventory-svc"
  ingress:
    - from:
        - podSelector:
            matchLabels:
              vsatApp: "vsat-status-svc"
---
# Source: inventory-svc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsat-inventory-svc
  namespace: "platform"
spec:
  type: ClusterIP
  ports:
    - port: 8099
      targetPort: service-port
      protocol: TCP
      name: service-port
  selector:
    app.kubernetes.io/name: inventory-svc
    app.kubernetes.io/instance: vsat
---
# Source: inventory-svc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsat-inventory-svc
  namespace: "platform"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory-svc
      app.kubernetes.io/instance: vsat
  template:
    metadata:
      labels:
        vsatApp: "vsat-inventory-svc"
        vsatRedisIngress: "true"
        vsatMessagingIngress: "true"
        app.kubernetes.io/name: inventory-svc
        app.kubernetes.io/instance: vsat
    spec:
      imagePullSecrets:
        - name: jfrogcred
      serviceAccountName: vsat-inventory-svc
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsUser: 1000
      containers:
        - name: vsat-inventory-svc
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "rimo.jfrog.io/docker/venafi-vsatellite/inventory-svc@sha256:eeb5e22df41a887939f8d54f0b0afc5a6917b4966692cee5a2b933086e943d0e"
          imagePullPolicy: IfNotPresent
          ports:
            - name: service-port
              containerPort: 8099
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: service-port
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: service-port
              scheme: HTTPS
            initialDelaySeconds: 5
          resources:
            {}
          volumeMounts:
            - mountPath: /etc/rancher/k3s
              name: venafi-registries-file
              readOnly: true
            - mountPath: /cloudconfig
              name: cloud-config
            - name: certs-mount
              mountPath: /certs-mount
              readOnly: true
      volumes:
        - name: venafi-registries-file
          configMap:
            name: venafi-registries-config
            optional: true
        - name: cloud-config
          configMap:
            name: cloud-vsat-config
        - name: certs-mount
          secret:
            secretName: vsat-inventory-svc-tls
