vsat/manifests/07-crypto-svc.yaml
---
# Source: crypto-svc/templates/ingressNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "crypto-svc-ingress"
spec:
  podSelector:
    matchLabels:
      vsatApp: "vsat-crypto-svc"
  ingress:
    - from: []
---
# Source: crypto-svc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsat-crypto-svc
  namespace: "platform"
spec:
  selector:
    app.kubernetes.io/name: crypto-svc
    app.kubernetes.io/instance: vsat
  type: ClusterIP
  ports:
    - port: !!int 8443
      targetPort: http
      protocol: TCP
      name: http
---
# Source: crypto-svc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsat-crypto-svc
  namespace: "platform"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: crypto-svc
      app.kubernetes.io/instance: vsat
  template:
    metadata:
      labels:
        vsatApp: "vsat-crypto-svc"
        vsatRedisIngress: "true"
        vsatMessagingIngress: "true"
        app.kubernetes.io/name: crypto-svc
        app.kubernetes.io/instance: vsat
    spec:
      imagePullSecrets:
        - name: jfrogcred
      serviceAccountName: vsat-crypto-svc
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsUser: 1000
      containers:
        - name: "vsat-crypto-svc"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "rimo.jfrog.io/docker/venafi-vsatellite/crypto-svc@sha256:265dcd420b961d70697941569b0492a92c51cdf7a94821e77a89ac9d2ccf175f"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: !!int "8443"
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTPS
            initialDelaySeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config.yaml
              subPath: config.yaml
            - name: credentials
              mountPath: /credentials
              readOnly: true              
            - name: certs-mount
              mountPath: /certs-mount
              readOnly: true
      volumes:      
        - name: certs-mount
          secret:
            secretName: crypto-svc-tls
        - name: config
          configMap:
            name: vsat-crypto-svc-config
        - name: credentials
          secret:
            secretName: client-credentials
