vsat/manifests/10-key-service.yaml
---
# Source: key-svc/templates/ingressNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "key-svc-ingress"
  namespace: "key-generation"
spec:
  podSelector:
    matchLabels:
      vsatApp: "vsat-key-svc"
  policyTypes:
    - Ingress
---
# Source: key-svc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsat-key-svc
  namespace: "key-generation"
  labels:
    app.kubernetes.io/name: key-svc
    app.kubernetes.io/instance: vsat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: key-svc
    app.kubernetes.io/instance: vsat
  ports:
    - port: !!int "8443"
      targetPort: !!int "8443"
      protocol: TCP
      name: key-port
---
# Source: key-svc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsat-key-svc
  namespace: "key-generation"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: key-svc
      app.kubernetes.io/instance: vsat
  template:
    metadata:
      labels:
        vsatApp: "vsat-key-svc"
        vsatRedisIngress: "true"
        vsatMessagingIngress: "true"
        vsatCryptoIngress: "true"
        app.kubernetes.io/name: key-svc
        app.kubernetes.io/instance: vsat
    spec:
      imagePullSecrets:
        - name: jfrogcred
      serviceAccountName: vsat-key-svc
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsUser: 1000
      containers:
        - name: vsat-key-svc
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "rimo.jfrog.io/docker/venafi-vsatellite/key-svc@sha256:15d306f3f9984488c776501a0ac54896a34391f8fd860052dd256f0f7ad77bea"
          imagePullPolicy: IfNotPresent
          ports:
            - name: service-port
              containerPort: !!int "8443"
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: service-port
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: service-port
              scheme: HTTPS
            initialDelaySeconds: 10
          resources:
            {}
          volumeMounts:
            - name: certs-mount
              mountPath: /certs-mount
              readOnly: true
      volumes:
        - name: certs-mount
          secret:
            secretName: key-svc-tls
