vsat/manifests/11-acme-service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: acme
---
# Source: acme-svc/templates/ingressNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "acme-svc-ingress"
  namespace: "acme"
spec:
  podSelector:
    matchLabels:
      vsatApp: "vsat-acme-svc"
  ingress:
    - from: []
---
# Source: acme-svc/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsat-acme-svc
  namespace: "acme"
spec:
  type: ClusterIP
  ports:
    - port: !!int "8443"
      targetPort: http
      protocol: TCP
      name: http

  selector:
    app.kubernetes.io/name: acme-svc
    app.kubernetes.io/instance: vsat
---
# Source: acme-svc/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsat-acme-svc
  namespace: "acme"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: acme-svc
      app.kubernetes.io/instance: vsat
  template:
    metadata:
      labels:
        vsatApp: "vsat-acme-svc"
        vsatRedisIngress: "true"
        vsatMessagingIngress: "true"
        vsatCryptoIngress: "true"
        app.kubernetes.io/name: acme-svc
        app.kubernetes.io/instance: vsat
    spec:
      imagePullSecrets:
        - name: jfrogcred
      serviceAccountName: vsat-acme-svc
      securityContext:
        fsGroup: 2000
        runAsGroup: 3000
        runAsUser: 1000
      containers:
        - name: acme-svc
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "rimo.jfrog.io/docker/venafi-vsatellite/acme-svc@sha256:eb7edd91f7120221f13605b8b8bdd66ef0a4eb034b1e03689fe78f1fe90e337a"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: !!int "8443"
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
          volumeMounts:
            - name: certs-mount
              mountPath: /certs-mount
              readOnly: true
      volumes:
        - name: certs-mount
          secret:
            secretName: acme-svc-tls
